Fixing assorted ContractController bugs, and adding some unit tests
